--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,19 @@
 {
-  "name": "pic picker",
-  "version": "1.0",
-  "description": "a browser action with a popup dump",
-  "browser_action": {
-    "default_icon":  "images/icon38.png",            // optional
-    "default_title": "pic picker",      // optional; shown in tooltip
-    "default_popup": "popup.html"        // optional
-  },
-  "manifest_version": 2,
-  "content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'"
-
-
+    "name": "pic picker",
+    "version": "1.0",
+    "manifest_version": 2,
+    "description": "a browser action with a popup dump",
+    "content_scripts": [{
+        "matches": ["http://*.renren.com/*"],
+        "js": [
+            "js/require.js",
+            "js/jquery-1.8.2.js",
+            "js/main.js"
+        ],
+        "run_at": "document_end"
+    }],
+    "permissions": [
+        "http://*.renren.com/"
+    ]
 }
 
