--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,27 @@
 {
-  "name": "pic picker",
-  "version": "1.0",
-  "description": "a browser action with a popup dump",
-  "browser_action": {
-    "default_icon":  "images/icon38.png",            // optional
-    "default_title": "pic picker",      // optional; shown in tooltip
-    "default_popup": "popup.html"        // optional
-  },
-  "manifest_version": 2,
-  "content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'"
+    "name": "pic picker",
+    "version": "1.0",
+    "description": "a browser action with a popup dump",
+    "browser_action": {
+        "default_icon":  "images/icon38.png",            // optional
+        "default_title": "pic picker",      // optional; shown in tooltip
+        "default_popup": "popup.html"        // optional
+    },
+    "manifest_version": 2,
+    "content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'",
+    "permissions": [
+    
+        "tabs",
+        "http://*.renren.com/",
+        "http://*.google.com/",
+        "unlimitedStorage",
+        "notifications",
+        "history",
+        "geolocation",
+        "cookies",
+        "idle"
+    
+    ]
 
 
 }
