--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,16 @@
     "content_scripts": [{
         "matches": ["http://*.renren.com/*"],
         "js": [
-            "js/require.js",
-            "js/jquery-1.8.2.js",
-            "js/main.js"
+            "js/inject.js"
         ],
         "run_at": "document_end"
     }],
+    "web_accessible_resources": [
+        "js/require.js",
+        "js/main.js",
+        "js/modules/jquery-1.8.2.js",
+        "js/modules/layout.js"
+    ],
     "permissions": [
         "http://*.renren.com/",
         "unlimitedStorage",
