--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
         "js/require.js",
         "js/main.js",
         "js/modules/jquery-1.8.2.js",
+        "js/modules/ajaxproxy.js",
         "js/modules/layout.js"
     ],
     "permissions": [
