--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
         "js/main.js",
         "js/modules/jquery-1.8.2.js",
         "js/modules/ajaxproxy.js",
-        "js/modules/layout.js"
+        "js/modules/layout.js",
+        "js/modules/data.js"
     ],
     "permissions": [
         "http://*.renren.com/",
