照片列表UI开发完成 加入css动画效果 解决chrome插件图片相对路径问题

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "content_scripts": [{
         "matches": ["http://*.renren.com/*"],
         "css": [
-            "css/index.css"
+            "css/index.css"     
         ],
         "js": [
             "js/inject.js"
@@ -21,7 +21,8 @@
         "js/modules/ajaxproxy.js",
         "js/modules/template.js",
         "js/modules/layout.js",
-        "js/modules/data.js"
+        "js/modules/data.js",
+        "images/year-icon.png"
     ],
     "permissions": [
         "http://*.renren.com/",
