弹层关闭功能 1、增加关闭按钮。2、layout增加delegateEvents方法注册事件。3增加events.js文件，copy backbone

--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,9 @@
         "js/modules/template.js",
         "js/modules/layout.js",
         "js/modules/data.js",
-        "images/year-icon.png"
+        "js/modules/events.js",
+        "images/year-icon.png",
+        "images/close-icon.png"
     ],
     "permissions": [
         "http://*.renren.com/",
