--- a/manifest.json
+++ b/manifest.json
@@ -31,6 +31,7 @@
         "images/close-icon.png",
         "images/year-icon.png",
         "images/loading-icon.gif",
+        "images/share-icon.png",
         "images/rr-icon.png"
     ],
     "permissions": [
